--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
             <header>
                 <h1>TicTacToe</h1>
             </header>
-            <nav></nav>
+            <!-- <nav></nav> -->
             <article>
                 <div id="playGround">
 
                 </div>
             </article>
-            <footer>Péti Dominik</footer>
+            <footer><h2>Péti Dominik</h2></footer>
         </main>
+        <svg id="P2" viewBox="0 0 256 256">
+            <path class="path" stroke="black" stroke-width="4"  d="M191.27,68.75A119.22,119.22,0,0,0,145.47,39c-16.87-6-35.3-7.84-52.92-4.31A93.47,93.47,0,0,0,48.38,56.94C36.25,68,27.24,82.57,24,98.72a78.85,78.85,0,0,0,4.93,46.83,66.82,66.82,0,0,0,34.2,35A124.53,124.53,0,0,0,91,189.35a246.4,246.4,0,0,0,32.46,4.45,219.41,219.41,0,0,0,31.92.14c9.56-.73,19.18-2.79,26.67-9.13,6.71-5.68,10.77-13.95,13.29-22.23a102.4,102.4,0,0,0,4.18-27.39,114.45,114.45,0,0,0-12.39-54.36,108.84,108.84,0,0,0-7-11.77,2.57,2.57,0,0,0-3.42-.9,2.53,2.53,0,0,0-.9,3.42A108.05,108.05,0,0,1,194,121.51a107,107,0,0,1-.57,26.64c-1.26,8.34-3.34,16.82-7.59,24.19a33.39,33.39,0,0,1-7.6,9.17,30.33,30.33,0,0,1-11.42,5.6,64.5,64.5,0,0,1-13.33,1.95c-5.13.31-10.28.39-15.41.34a239,239,0,0,1-31.4-2.37,186.38,186.38,0,0,1-29-6.23A82,82,0,0,1,53,168.69,60,60,0,0,1,38.19,152.5a72.68,72.68,0,0,1-10.67-42.57A70.74,70.74,0,0,1,44.19,68.49,86.81,86.81,0,0,1,83,42.37a91.07,91.07,0,0,1,49.16-2.08,110.82,110.82,0,0,1,46.12,23.15,117.92,117.92,0,0,1,9.45,8.85c2.23,2.32,5.76-1.22,3.53-3.54Z"/>
+        </svg>
+
     </body>
 
 </html>
